feat: saving project in personal repository

--- a/src/components/cores/button/button.module.scss
+++ b/src/components/cores/button/button.module.scss
@@ -57,6 +57,14 @@
     &:hover {
       opacity: 0.8;
     }
+    svg {
+      width: 13px !important;
+      height: 13px !important;
+      path {
+        fill: transparent !important;
+        stroke: white;
+      }
+    }
   }
   &-icon {
     margin-left: 6px;
